--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="app_name">MoodApp</string>
+    <string name="logout">Log Out</string>
+    <string name="night_mode">Night Mode</string>
+    <string name="profile">Profile</string>
 
 
 </resources>
