feat: Add nav grapth and fragments skeleton.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,14 @@
     <string name="night_mode">Night Mode</string>
     <string name="profile">Profile</string>
 
+    <string name="hint_username">Username</string>
+    <string name="hint_password">Password</string>
+    <string name="button_next">Next</string>
+    <string name="button_cancel">Cancel</string>
+    <string name="error_password">Password must contain at least 8 characters.</string>
+    <string name="invalid_credentials">Username or Password error!</string>
+    <string name="logo_content_description">Shrine Logo</string>
+    <string name="signup_button">Register+Login</string>
+    <string name="login_button">Login</string>
 
 </resources>
