fix: bug - app bar appears on loading page. Now, app bar only appears after auth.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,5 +32,6 @@
     <string name="login_button">Login</string>
     <string name="recent_item">Recents</string>
     <string name="home_item">Home</string>
+    <string name="register_item">Register</string>
 
 </resources>
